<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_layout"
    tools:context="com.yuyunchao.asus.mytaoshop.presenter.main.myself.user.register.RegisterActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_register"
        android:background="@color/colorPrimary"
        android:title="@string/goods_details"
        android:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_below="@id/tb_register"
        android:background="@color/graywhite"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_10">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_weight="1"
                android:background="@color/white"
                android:id="@+id/et_register_nickname"
                android:hint="@string/nickname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:drawableLeft="@drawable/selector_user"/>
            <ImageView
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_weight="0"
                android:id="@+id/im_register_head"
                android:src="@drawable/ic_chat_one"
                android:layout_width="@dimen/dp_55"
                android:layout_height="@dimen/dp_55" />
        </LinearLayout>
        <EditText
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            android:id="@+id/et_register_username"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:drawableLeft="@drawable/selector_user"/>
        <EditText
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            android:id="@+id/et_register_pwd"
            android:inputType="textPassword"
            android:hint="@string/pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:drawableLeft="@drawable/selector_user"/>
        <EditText
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            android:id="@+id/et_register_qr_pwd"
            android:inputType="textPassword"
            android:hint="@string/qr_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:drawableLeft="@drawable/selector_user"/>
        <Button
            android:layout_marginTop="@dimen/dp_10"
            android:id="@+id/btn_register"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:enabled="false"/>
         />
    </LinearLayout>
</RelativeLayout>
