<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yuyunchao.asus.mytaoshop.presenter.main.myself.user.login.LoginActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_login"
        android:background="@color/colorPrimary"
        android:title="@string/login"
        android:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_below="@id/tb_login"
        android:background="@color/graywhite"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_10">
        <EditText
            android:background="@color/white"
            android:id="@+id/et_login_username"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:drawableLeft="@drawable/selector_user"/>
        <EditText
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            android:id="@+id/et_login_pwd"
            android:inputType="textPassword"
            android:hint="@string/pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:drawableLeft="@drawable/selector_user"/>
        <Button
            android:layout_marginTop="@dimen/dp_10"
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:enabled="false"/>
        <TextView
            android:layout_gravity="right"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/register"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/colorblue"
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
